core/external-secrets.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
