core/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
