core/kyverno.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
