core/metal.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metal-system
