core/longhorn.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  labels:
    cluster.routine.sh/oidc-credentials: longhorn-ui-oidc-credentials
spec:
  hostnames: [ "longhorn.${CLUSTER_DOMAIN}" ]
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: gateway
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: longhorn-frontend
        port: 80
      matches:
      - path:
          type: PathPrefix
          value: /
