core/purko.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: purko-dashboard
  namespace: purko-system
  annotations:
    dns.routine.sh/external: "true"
  labels:
    cluster.routine.sh/oidc-credentials: purko-oidc-credentials
spec:
  hostnames: [ "purko.${CLUSTER_DOMAIN}" ]
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: purko-operator
          port: 8082
      matches:
        - path:
            type: PathPrefix
            value: /
